--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ html,body{
   <!-- <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/32072943_10156471778664664_875898785484505088_o.jpg?_nc_cat=0&oh=ffe519e8e8e5a58c9d6289d21da2499e&oe=5B8AA3E3"> -->
   <div style="display: flex; width: 100%; height: 100%; justify-content: center; align-items: center">
     <div style="background-color: rgba(255, 255, 255, 0.7); border-radius: .5em; padding: 2em 5em; text-align: center; display: flex; flex-direction: column;">
-      <h1><a href="https://www.facebook.com/groups/TheMeadowsShare/" style="text-decoration: none;">The Meadows</a></h1>
+      <h1 style="margin-top:0"><a href="https://www.facebook.com/groups/TheMeadowsShare/" style="text-decoration: none;">The Meadows</a></h1>
       <aside>Background provided by the brilliant <a href="https://www.facebook.com/cavid.nadirov">Cavid Nadir</a>.</aside>
     </div>
   </div>
